# book-api

./: .gitignore  README.md  pyproject.toml
accounts/: middleware.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
backend/: settings.py  urls.py
books/: models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_readinglistbook_reading_list.py
